# fintual-portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
prompts/: conversation.md
src/: __init__.py
src/portfolio/: __init__.py  portfolio.py  stock.py
tests/: test_portfolio.py  test_stock.py
